add routing switch

--- a/src/resources/appContext.json
+++ b/src/resources/appContext.json
@@ -103,7 +103,8 @@
                 "createVectorLayerBtn",
                 "importVectorLayerBtn",
                 "detectionLimitBtn",
-                "ScenarioAlertBtn"
+                "ScenarioAlertBtn",
+                "routingBtn"
             ],
             "vectorIcons": [
                 {
