Restructure the routing section of the sidepanel
- clicking the "routing" button in the sidepanel shows
  "classic routing" and "fleet routing"
- only one of both windows can be open, otherwise
  the current open window starts shaking
- rename "routing" to "classic routing", this is
  helpful for separation to "fleet routing"

--- a/src/resources/appContextTest.json
+++ b/src/resources/appContextTest.json
@@ -104,7 +104,7 @@
                 "importVectorLayerBtn",
                 "detectionLimitBtn",
                 "ScenarioAlertBtn",
-                "routingBtn"
+                "classicRoutingBtn"
             ],
             "vectorIcons": [
                 {
