--- a/src/resources/appContext.json
+++ b/src/resources/appContext.json
@@ -104,7 +104,8 @@
                 "importVectorLayerBtn",
                 "detectionLimitBtn",
                 "ScenarioAlertBtn",
-                "routingBtn"
+                "classicRoutingBtn",
+                "fleetRoutingBtn"
             ],
             "vectorIcons": [
                 {
@@ -229,6 +230,7 @@
             "routing": {
                 "openrouteserviceUrl": "https://entw-imis.lab.bfs.de/ors",
                 "photonUrl": "/geocoding-dev",
+                "vroomUrl": "https://entw-imis.lab.bfs.de/ors/optimization",
                 "routeStyle": {
                     "color": "#ff0000",
                     "width": 5
