Show waypoints on map

--- a/src/resources/appContext.json
+++ b/src/resources/appContext.json
@@ -243,6 +243,10 @@
                     "markerSize": 38,
                     "color": "black"
                 },
+                "jobMarkerStyle": {
+                    "markerSize": 28,
+                    "color": "black"
+                },
                 "elevationStyle": {
                     "fill": "#ffffff",
                     "stroke": "#ffffff",
