--- a/src/resources/appContextTest.json
+++ b/src/resources/appContextTest.json
@@ -104,7 +104,8 @@
                 "importVectorLayerBtn",
                 "detectionLimitBtn",
                 "ScenarioAlertBtn",
-                "classicRoutingBtn"
+                "classicRoutingBtn",
+                "fleetRoutingBtn"
             ],
             "vectorIcons": [
                 {
