--- a/src/resources/appContextTest.json
+++ b/src/resources/appContextTest.json
@@ -100,7 +100,8 @@
                 "detectionLimitBtn",
                 "ScenarioAlertBtn",
                 "classicRoutingBtn",
-                "fleetRoutingBtn"
+                "fleetRoutingBtn",
+                "isochroneRoutingBtn"
             ],
             "vectorIcons": [
                 {
