--- a/docker/default.conf
+++ b/docker/default.conf
@@ -34,6 +34,6 @@ server {
         proxy_pass https://entw-imis.lab.bfs.de/photon;
     }
     location /api {
-        proxy_pass https://osm.bfs.de/ors/geocode/api;
+        proxy_pass https://entw-imis.lab.bfs.de/ors/geocode/api;
     }
 }
