Update geostyler & configure defaults

--- a/docker/default.conf
+++ b/docker/default.conf
@@ -12,6 +12,7 @@ server {
 
     root /var/www/html/;
     index index.php;
+    disable_symlinks off;
 
     location / {
         proxy_pass http://bfs-app:1841;
