--- a/src/package.json
+++ b/src/package.json
@@ -58,13 +58,15 @@
         "test": "test"
     },
     "dependencies": {
-        "antd": "3.26.17",
-        "geostyler": "4.5.0",
+        "antd": "4.11.2",
+        "geostyler": "5.1.0",
         "geostyler-geojson-parser": "1.0.1",
         "geostyler-mapbox-parser": "0.1.0",
-        "geostyler-openlayers-parser": "1.1.1",
+        "geostyler-openlayers-parser": "2.1.0",
         "geostyler-qgis-parser": "0.2.3",
-        "geostyler-sld-parser": "2.0.1",
+        "geostyler-sld-parser": "2.2.0",
+        "geostyler-style": "2.1.0",
+        "geostyler-wfs-parser": "1.0.1",
         "react": "16.13.1",
         "react-dom": "16.13.1"
     }
