update ors urls and set reverse proxy

--- a/docker/default.conf
+++ b/docker/default.conf
@@ -34,7 +34,7 @@ server {
     location /geocoding-dev {
         proxy_pass https://entw-imis.lab.bfs.de/photon;
     }
-    location /api {
-        proxy_pass https://entw-imis.lab.bfs.de/ors/geocode/api;
+    location /ors {
+        proxy_pass https://osm.bfs.de/ors;
     }
 }
