--- a/src/resources/appContext.json
+++ b/src/resources/appContext.json
@@ -6,6 +6,7 @@
                 "metadata-xml2json": "http://localhost/geonetwork/srv/api/0.1/records/",
                 "metadata-search": "http://localhost/geonetwork/srv/ger/csw?",
                 "spatial-search": "/ors/geocode/api",
+                "station-search": "/ogc/ows",
                 "print-servlet": "http://localhost/bfs-printservice/print/",
                 "irix-servlet": "http://localhost/irix-servlet",
                 "irix-context": "resources/irixContext.json",
