add missing config

--- a/src/resources/appContextTest.json
+++ b/src/resources/appContextTest.json
@@ -6,6 +6,7 @@
                 "metadata-xml2json": "http://10.133.7.220/geonetwork/srv/api/0.1/records/",
                 "metadata-search": "http://10.133.7.220/geonetwork/srv/ger/csw?",
                 "spatial-search": "/ors/geocode/api",
+                "station-search": "/ogc/ows",
                 "print-servlet": "http://10.133.7.220/bfs-printservice/print/",
                 "irix-servlet": "http://10.133.7.220/irix-servlet",
                 "irix-context": "resources/irixContext.json",
