--- a/src/resources/appContextTest.json
+++ b/src/resources/appContextTest.json
@@ -244,7 +244,9 @@
                 "elevationStyle": {
                     "fill": "#ffffff",
                     "stroke": "#ffffff",
-                    "radius": 3
+                    "radius": 3,
+                    "markerSize": 38,
+                    "color": "#0d63bd"
                 },
                 "avoidAreaStyle": {
                     "strokeColor": "#000000",
