--- a/src/resources/appContext.json
+++ b/src/resources/appContext.json
@@ -89,7 +89,23 @@
             },
             "createLegendGraphicLayer": "bfs:planungsradien",
             "tools": [
-
+                "classicRoutingBtn"
+            ],
+            "COPY_tools": [
+                "addWmsBtn",
+                "printBtn",
+                "cloneBtn",
+                "selectFeaturesBtn",
+                "irixPrintBtn",
+                "measureBtn",
+                "drawBtn",
+                "createVectorLayerBtn",
+                "importVectorLayerBtn",
+                "detectionLimitBtn",
+                "ScenarioAlertBtn",
+                "classicRoutingBtn",
+                "fleetRoutingBtn",
+                "isochroneRoutingBtn"
             ],
             "vectorIcons": [
                 {
