Fleet/Isochrone Routing: apply upgrade fixes

--- a/src/resources/appContext.json
+++ b/src/resources/appContext.json
@@ -89,7 +89,9 @@
             },
             "createLegendGraphicLayer": "bfs:planungsradien",
             "tools": [
-                "classicRoutingBtn"
+                "classicRoutingBtn",
+                "isochroneRoutingBtn",
+                "fleetRoutingBtn"
             ],
             "COPY_tools": [
                 "addWmsBtn",
