Add print with errors

--- a/src/resources/appContext.json
+++ b/src/resources/appContext.json
@@ -90,6 +90,7 @@
             "createLegendGraphicLayer": "bfs:planungsradien",
             "tools": [
                 "addWmsBtn",
+                "printBtn",
                 "classicRoutingBtn",
                 "fleetRoutingBtn",
                 "isochroneRoutingBtn"
