--- a/src/resources/appContext.json
+++ b/src/resources/appContext.json
@@ -91,6 +91,8 @@
             "tools": [
                 "addWmsBtn",
                 "printBtn",
+                "cloneBtn",
+                "selectFeaturesBtn",
                 "classicRoutingBtn",
                 "fleetRoutingBtn",
                 "isochroneRoutingBtn"
