--- a/src/resources/appContext.json
+++ b/src/resources/appContext.json
@@ -93,6 +93,7 @@
                 "printBtn",
                 "cloneBtn",
                 "selectFeaturesBtn",
+                "irixPrintBtn",
                 "classicRoutingBtn",
                 "fleetRoutingBtn",
                 "isochroneRoutingBtn"
