Activate all 'tools'

--- a/src/resources/appContext.json
+++ b/src/resources/appContext.json
@@ -94,6 +94,12 @@
                 "cloneBtn",
                 "selectFeaturesBtn",
                 "irixPrintBtn",
+                "measureBtn",
+                "drawBtn",
+                "createVectorLayerBtn",
+                "importVectorLayerBtn",
+                "detectionLimitBtn",
+                "ScenarioAlertBtn",
                 "classicRoutingBtn",
                 "fleetRoutingBtn",
                 "isochroneRoutingBtn"
