Highlight jobs and vehicles when hovering in grid

--- a/src/resources/appContextTest.json
+++ b/src/resources/appContextTest.json
@@ -240,6 +240,10 @@
                     "markerSize": 38,
                     "color": "black"
                 },
+                "highlightWaypointStyle": {
+                    "markerSize": 38,
+                    "color": "#ff0000"
+                },
                 "elevationStyle": {
                     "fill": "#ffffff",
                     "stroke": "#ffffff",
