--- a/src/resources/appContextTest.json
+++ b/src/resources/appContextTest.json
@@ -101,7 +101,8 @@
                 "ScenarioAlertBtn",
                 "classicRoutingBtn",
                 "fleetRoutingBtn",
-                "isochroneRoutingBtn"
+                "isochroneRoutingBtn",
+                "wpsLayerBtn"
             ],
             "vectorIcons": [
                 {
