--- a/src/package.json
+++ b/src/package.json
@@ -8,12 +8,13 @@
         "lint": "eslint -c .eslintrc app/ classic/ modern/ overrides/ && eslint -c test/.eslintrc test/",
         "lint-fix": "eslint --fix -c .eslintrc app/ classic/ modern/ && eslint --fix -c test/.eslintrc test/",
         "test": "npm-run-all --parallel --race test:all",
-        "test:all": "npm-run-all test:classic test:modern",
+        "test:all": "npm-run-all test:classic test:modern copy-coverages",
         "test:classic": "karma start karma.conf.js --single-run --toolkit classic",
         "test:modern": "karma start karma.conf.js --single-run --toolkit modern",
         "test:watch": "karma start karma.conf.js",
-        "combine-coverages": "istanbul report --root coverage --dir coverage-combined",
-        "coverage-summary": "istanbul report --root coverage text-summary",
+        "copy-coverages": "cp coverage/modern/*/*json coverage/coverage1.json && cp coverage/classic/*/*json coverage/coverage2.json",
+        "combine-coverages": "nyc merge coverage/ coverage-combined/coverage.json",
+        "coverage-summary": "nyc report -t coverage-combined",
         "userdoc": "gitbook pdf ../docs/userdoc ../docs/userdoc/User-Documentation.pdf",
         "jsduck": "jsduck --config jsduck-config.json",
         "clean": "rimraf apidoc build/* coverage coverage-combined"
@@ -25,29 +26,29 @@
     "author": "terrestris GmbH & Co. KG <info@terrestris.de>",
     "license": "GPL-3.0",
     "devDependencies": {
-        "acorn": "8.5.0",
+        "acorn": "8.7.0",
         "braces": "3.0.2",
-        "eslint": "8.0.1",
+        "eslint": "8.10.0",
         "expect.js": "0.3.1",
-        "express": "4.17.1",
-        "istanbul": "0.4.5",
+        "express": "4.17.3",
         "jsduck": "1.1.2",
-        "karma": "6.3.4",
+        "karma": "6.3.16",
         "karma-chrome-launcher": "3.1.0",
-        "karma-coverage": "2.0.3",
+        "karma-coverage": "2.2.0",
         "karma-coverage-istanbul-reporter": "3.0.3",
         "karma-expect": "1.1.3",
-        "karma-firefox-launcher": "2.1.1",
+        "karma-firefox-launcher": "2.1.2",
         "karma-mocha": "2.0.1",
         "karma-mocha-reporter": "2.2.5",
         "karma-sinon": "1.0.5",
         "lodash": "4.17.21",
-        "minimatch": "3.0.4",
-        "mocha": "9.1.3",
+        "minimatch": "5.0.1",
+        "mocha": "9.2.1",
         "npm-run-all": "4.1.5",
+        "nyc": "15.1.0",
         "rimraf": "3.0.2",
-        "serve-static": "1.14.1",
-        "sinon": "11.1.2"
+        "serve-static": "1.14.2",
+        "sinon": "13.0.1"
     },
     "bugs": {
         "url": "https://github.com/OpenBfS/gis_client/issues"
@@ -59,13 +60,13 @@
     },
     "dependencies": {
         "antd": "4.16.13",
-        "geostyler": "7.2.1",
+        "geostyler": "8.0.1",
         "geostyler-geojson-parser": "1.0.1",
         "geostyler-mapbox-parser": "2.0.0",
-        "geostyler-openlayers-parser": "3.0.0",
+        "geostyler-openlayers-parser": "3.0.1",
         "geostyler-qgis-parser": "1.0.0",
-        "geostyler-sld-parser": "3.0.1",
-        "geostyler-style": "5.0.0",
+        "geostyler-sld-parser": "3.2.1",
+        "geostyler-style": "5.0.2",
         "geostyler-wfs-parser": "1.0.1",
         "react": "16.14.0",
         "react-dom": "16.14.0"
