Fix handling of opacity

--- a/docker/default.conf
+++ b/docker/default.conf
@@ -9,6 +9,7 @@ server {
     client_max_body_size 1024m;
     #server_name  localhost;
     proxy_read_timeout 28800s;
+    large_client_header_buffers 4 128k;
 
     root /var/www/html/;
     index index.php;
