--- a/src/.eslintrc
+++ b/src/.eslintrc
@@ -49,7 +49,8 @@
         "WpsService": true,
         "InputGenerator": true,
         "OutputGenerator": true,
-        "cptable": true
+        "cptable": true,
+        "shp": true
     },
     "rules": {
         "comma-dangle": 2,
