change stationSearchTypeName to meaningfull layer

--- a/src/resources/appContext.json
+++ b/src/resources/appContext.json
@@ -2,7 +2,7 @@
     "data": {
         "merge": {
             "headerTitle": "IMIS",
-            "stationSearchTypeName": "bfs:planungsradien",
+            "stationSearchTypeName": "opendata:odl_sondenstandorte",
             "urls": {
                 "metadata-xml2json": "http://localhost/geonetwork/srv/api/0.1/records/",
                 "metadata-search": "http://localhost/geonetwork/srv/ger/csw?",
