--- a/src/package.json
+++ b/src/package.json
@@ -60,6 +60,7 @@
     },
     "dependencies": {
         "antd": "4.16.13",
+        "echarts": "^5.3.3",
         "geostyler": "8.0.2",
         "geostyler-geojson-parser": "1.0.1",
         "geostyler-mapbox-parser": "2.0.0",
