Fix routing config

--- a/src/resources/appContextTest.json
+++ b/src/resources/appContextTest.json
@@ -228,6 +228,7 @@
                 "openrouteserviceUrl": "/ors",
                 "photonUrl": "/ors/geocode",
                 "vroomUrl": "/ors/optimization",
+                "vroomUrlASAP": "/ors/optimization",
                 "routeStyle": {
                     "colorPrimary": "#ff0000",
                     "colorSecondary": "#BDBDBD",
@@ -241,7 +242,7 @@
                     "markerSize": 38,
                     "color": "black"
                 },
-                "highlightWaypointStyle": {
+                "highlightedWaypointStyle": {
                     "markerSize": 38,
                     "color": "#ff0000"
                 },
