--- a/docker/default.conf
+++ b/docker/default.conf
@@ -29,6 +29,9 @@ server {
     location /geonetwork {
         proxy_pass http://10.133.7.220/geonetwork;
     }
+    location /catalog-public {
+        proxy_pass http://10.133.7.220/catalog-public;
+    }
     location /irix-servlet {
         proxy_pass http://10.133.7.220/irix-servlet;
     }
