--- a/src/app.json
+++ b/src/app.json
@@ -7,7 +7,7 @@
     /**
      * The version of the application.
      */
-    "version": "1.18.6-SNAPSHOT",
+    "version": "1.18.55555",
 
     /**
      * The relative path to the application's markup file (html, jsp, asp, etc.).
